# law-xllm

./: LICENSE  README.md
backend/: .env  .flake8  README.md  app.py  file_processor.py  pyproject.toml  rag.py  requirements.txt
backend/collection/: ConversationCollection.json  UserCollection.json
backend/law_scraper/: filtered_links.txt  scrapy.cfg
backend/law_scraper/law_scraper/: items.py  middlewares.py  pipelines.py  settings.py
backend/law_scraper/law_scraper/spiders/: scraper.py
backend/notebooks/: test.ipynb
backend/src/: __init__.py
backend/src/control/: auth_control.py  control.py  conversation_control.py  google_control.py  openai_control.py  rag_functions.py  user_control.py
backend/src/model/: conversation_model.py  openai_model.py  user_model.py
frontend/: .env.temp  .eslintrc.json  .prettierignore  README.md  components.json  knip.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/auth/: AuthProvider.tsx  types.ts  useAuth.ts
frontend/src/components/: CustomSignInButton.tsx  CustomSignInForm.tsx  CustomSignUpForm.tsx
frontend/src/components/GoogleAuth/: GoogleLoginComponent.tsx  type.ts
frontend/src/components/Layout/: layout.tsx
frontend/src/components/Notification/: Notification.tsx  types.ts
frontend/src/components/SidebarNav/: SidebarNav.tsx  button.tsx  input.tsx  textarea.tsx
frontend/src/data/: conversations.json
frontend/src/hooks/: ChatGPTCall.tsx  type.ts
frontend/src/pages/: AppContext.tsx  _app.tsx  index.tsx
frontend/src/styles/: globals.css
frontend/src/utils/: metadata.ts
(+8 files in other folders)
